	Generating maps only when needed
	Started getting user input
2/9/2022
	Turns out getting user input is REALLY annoying, tons of bugs
	Fixed bugs with purging user input(dumb asf)
	Creating manhattan distance for generation of pokestops
	I think I'm done?
	Bug->Only shows incorrect movement half the time...wtf
2/20/2022
    Started project, no idea what im doing, professors code is confusing
2/21/2022
    Bashed head against wall for many hours trying to figure out what im doing
2/22/2022
    Implemented the start of dijkstra's up to neighbor checking
2/23/2022
    Added neighbor checking
    Found bug in creation of costMap, where I was using it map[y][x] but initialized it as map[x][y].
    Adapted Distance map to be Rival and Hiker
    Changed various things around project for increased readability -> Mainly symbols and adding some constants.
3/6/2022
    Added player movement
    Added number of trainers as an intake
    Added trainers onto the map
    Found bug where players could move onto all trainers except first hiker - fixed this bug
3/7/2022
    Changed cost maps to make trainer locations infinite cost.
    Implemented Hiker Movement
    Implemented Rival Movement
    Implement Pacer Movement
3/8/2022
    Implemented Wanderer Movement
    Added Player standing still movement command
    Implemented remaining NPC movement & more.
3/20/2022
    Started implementing Ncurses
    Got map to output using Ncurses
    Color coding works
3/21/2022
    IDK why but color isn't working anymore
    Added player movement using ncurses
    Ripped out a bunch of no-longer needed code
    Added ability for NPC's to start battle with player when attempting to path onto their tile
    Added ability for PC's to start battle with NPC's when attempting to path onto their tile
3/22/2022
    BUG FOUND: When player is inside a building, NPC's will still start a battle with them if adjacent.
3/23/2022
    Fixed bug where NPC's would start battle with player when in buildings.